[tool.poetry]
name = "add-noqa-to-imports"
version = "0.1.0"
description = "Added noqa E501 automatically for not splitable import statements"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
