[tool.poetry]
name = "add-noqa-to-imports"
version = "0.1.0"
description = "Added noqa E501 automatically for not splitable import statements"
authors = ["Tesla2000 <fratajczak124@gmail.com>"]
readme = "README.md"
authors = ["Filip Ratajczak <fratajczak124@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Tesla2000/suppress-lenght-check-import"
repository = "https://github.com/Tesla2000/suppress-lenght-check-import"
documentation = "https://github.com/Tesla2000/suppress-lenght-check-import"

[tool.poetry.dependencies]
python = "^3.10"
libcst = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
add-noqa-to-import = "add_noqa_to_import:main"